runs/github.com/b/bishopkd/dsi-sf2-bishopkd/logs/test-notebook-.ipynb_checkpoints-w1-1.3-bonus-starter-checkpoint.ipynb-2020-07-21T07.59.txt
[I 200721 08:00:41 inrepo:36] Testing notebook .ipynb_checkpoints/w1-1.3-bonus-starter-checkpoint.ipynb
[W 200721 08:00:43 inrepo:48] No such kernel Python [dsi], falling back on kernel language=python
[W 200721 08:00:43 inrepo:60] Using kernel python3 to provide language: python
[I 200721 08:00:44 execute:404] Executing notebook with kernel: python3
Traceback (most recent call last):
  File "/src/inrepo.py", line 114, in <module>
    main()
  File "/src/inrepo.py", line 110, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 75, in run_notebook
    nb, cwd=os.path.dirname(nb_path), kernel_name=kernel_name, timeout=600
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
# Here's a bit of starter code to get you started:
def count_types(input):
    # Feel free to use this method or not.
    print input

example_input = [
    True, 
    5, 
    23.234, 
    3.55, 
    "Kiefer is a nerd", 
    {"steve": "jobs"}, 
    (5, 23, 55), 
    max([1, 0, 1, 1]), 
    abs(-234), 
    (5 + 3.01), 
    "",
    None,
    [5] * 20,
    "343434",
    "5" + "aaaaaa2",
    55 % 3,
    5^2
]

count_types(example_input)

------------------

[0;36m  File [0;32m"<ipython-input-1-daeee44c8a2f>"[0;36m, line [0;32m4[0m
[0;31m    print input[0m
[0m              ^[0m
[0;31mSyntaxError[0m[0;31m:[0m Missing parentheses in call to 'print'. Did you mean print(input)?

SyntaxError: Missing parentheses in call to 'print'. Did you mean print(input)? (<ipython-input-1-daeee44c8a2f>, line 4)


Container exited with status: {'Error': None, 'StatusCode': 1}
